src/test/ui/macros/issue-61033-2.stderr
error: meta-variable `id1` repeats 2 times, but `id2` repeats 3 times
  --> $DIR/issue-61033-2.rs:8:10
   |
LL |           $(
   |  __________^
LL | |             $id1 + $id2 // $id1 and $id2 may repeat different numbers of times
LL | |         )*
   | |_________^

error: aborting due to previous error

